--- a/TweeterProject/templates/successPost.mustache
+++ b/TweeterProject/templates/successPost.mustache
@@ -1,6 +1,7 @@
 <div>
-    <h1>posted </h1>
+    <h1>Tweet posted </h1>
     <form action="/posts" method="get">
         <input value="profile" type="submit"/>
     </form>
 </div>
+
